# bearings

./: CMakeLists.txt  LICENSE  README.md  error.txt  package.xml  params.txt  placing_iris_error.txt  placing_iris_params.txt  placing_iris_x.txt  placing_iris_y.txt  placing_iris_z.txt  requirements.txt  temp.txt  x.txt  y.txt  z.txt
Python/: Simulación copy.py
config/: general.yaml  params_drone_1.yaml  params_drone_2.yaml  params_drone_3.yaml  params_drone_4.yaml  params_drone_5.yaml  params_hummingbird.yaml  params_iris.yaml  params_iris1.yaml  params_iris2.yaml  params_iris3.yaml  params_iris4.yaml
description/: camera.xacro  camera_bebop2.xacro  camera_iris.xacro
include/: bearings.h
launch/: bebop2.launch  bebop2_4.launch  bebop2_5.launch  calibration.launch  control.launch  ibvs_iris.launch  iris.launch  iris_wall.launch  iris_wall_4.launch  iris_wall_5.launch  spawn_mav.launch
meshes/: bebop2_1.blend  bebop2_1.blend1  bebop2_1.dae  bebop2_2.blend  bebop2_2.blend1  bebop2_2.dae  bebop2_3.blend  bebop2_3.blend1  bebop2_3.dae  bebop2_4.blend  bebop2_4.blend1  bebop2_4.dae  bebop2_5.blend  bebop2_5.blend1  bebop2_5.dae  propeller_fl_red.blend  propeller_fl_red.blend1  propeller_fl_red.dae  propeller_fr_red.blend  propeller_fr_red.dae
src/: bearings.cpp
urdf/: mav_generic_odometry_sensor.gazebo
worlds/: ground.world  ground_no_box.world  ground_wall.world  ground_wall_calib.world  temp.world
xacro/: bebop2.xacro  bebop2_1.xacro  bebop2_1_base.xacro  bebop2_2.xacro  bebop2_2_base.xacro  bebop2_3.xacro  bebop2_3_base.xacro  bebop2_4.xacro  bebop2_5.xacro  (+15 more)
(+132 files in other folders)
